--- a/animals/pubspec.yaml
+++ b/animals/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_launcher_icons: ^0.14.3
   shared_preferences: ^2.5.3
   flutter_colorpicker: ^1.1.0
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
@@ -68,6 +69,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/img/
+    - assets/animals/
     - assets/json/
 
   # An image asset can refer to one or more resolution-specific "variants", see
