--- a/animals/pubspec.yaml
+++ b/animals/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   shared_preferences: ^2.5.3
   flutter_colorpicker: ^1.1.0
   provider: ^6.1.5
+  image_picker: ^1.1.2
+  image_cropper: ^9.1.0
 
 dev_dependencies:
   flutter_test:
